# simple-chat-app

./: Makefile  README.md  main.py  pyproject.toml  renovate.json
app/domain/chat/entity/: chat.py
app/domain/chat/repository/: chat.py
app/domain/chat/value_object/: answer.py  question.py  title.py
app/domain/shared/value_object/: id.py  time.py
app/infrastructure/: config.py
app/infrastructure/fastapi/: application.py  server.py
app/infrastructure/fastapi/handler/stream/: chat_stream.py
app/infrastructure/fastapi/handler/ui/: ui.py
app/infrastructure/memory/repository/: chat.py
app/infrastructure/openai/: client.py
app/usecase/ports/input/stream/: chat_session.py
app/usecase/ports/output/llm/: client.py  clint.py
app/usecase/stream/: chat_session.py
